Отступ лучше сверху

--- a/templates/city/city.show.sm.html
+++ b/templates/city/city.show.sm.html
@@ -18,7 +18,7 @@
         margin-bottom: 4px;
 }
 .city-tree-full li.m_region {
-        margin-bottom: 6px;
+        margin-top: 7px;
 }
 .city-tree-full li a.m_left_more {
         margin-left:40px;
