Области немного крупнее городов

--- a/templates/city/city.show.sm.html
+++ b/templates/city/city.show.sm.html
@@ -15,10 +15,11 @@
         font-size:16px;
 }
 .city-tree-full li {
-        margin-bottom: 4px;
+        margin-bottom: 5px;
 }
 .city-tree-full li.m_region {
-        margin-top: 7px;
+        margin-top: 8px;
+        font-size: 17px;
 }
 .city-tree-full li a.m_left_more {
         margin-left:40px;
