--- a/css/common-modules.css
+++ b/css/common-modules.css
@@ -20,6 +20,25 @@
     float: right;
 }
 
+/*------------------------------------- CITY --------------------------*/
+.city-tree-full {
+        list-style-type: none;
+        font-size:16px;
+}
+.city-tree-full li {
+        margin-bottom: 5px;
+}
+.city-tree-full li.m_region {
+        margin-top: 8px;
+        font-size: 17px;
+}
+.city-tree-full li a.m_left_more {
+        margin-left:40px;
+}
+.city-tree-full li a.m_left_moremore {
+        margin-left:60px;
+}
+
 /*------------------------------------- LIST --------------------------*/
 .list-half-left {
     width:49%;
