Переход на https

--- a/templates/city/weather.block.sm.html
+++ b/templates/city/weather.block.sm.html
@@ -1,4 +1,4 @@
-<img class="weatherblock_icon" src="http://openweathermap.org/img/w/{$weather_data.weather_icon}.png" alt="{$weather_data.weather_text}" title="{$weather_data.weather_full}" />
+<img class="weatherblock_icon" src="https://openweathermap.org/img/w/{$weather_data.weather_icon}.png" alt="{$weather_data.weather_text}" title="{$weather_data.weather_full}" />
 <div class="weatherblock_temperature">{if $weather_data.temp_range}{$weather_data.temp_range}{else}{$weather_data.temperature}{/if}&deg;C</div>
 <div class="weatherblock_elements">
     <span title="атмосферное давление">{$weather_data.pressure}&nbsp;кПа</span>,
