Переход на https

--- a/templates/_pages/ajaxpoint.show.sm.html
+++ b/templates/_pages/ajaxpoint.show.sm.html
@@ -1,5 +1,5 @@
 <div class="simplewindow">
-    
+
     <div id="object_container">
         <h2>{$object.pt_name}</h2>
         <div id="object_text_container">
@@ -35,3 +35,4 @@
         </div>
     </div>
 </div>
+<script type="text/javascript" src="http://www.panoramio.com/wapi/wapi.js?v=1&amp;hl=ru"></script>
