Берем локальные иконки

--- a/templates/index.html/index.sm.html
+++ b/templates/index.html/index.sm.html
@@ -23,7 +23,7 @@
     {foreach from=$agrnewsentries item=entry}
     <div class="index-blog-record">
         <h4 class="index-blog-title">
-            <img src="https://favicon.yandex.ru/favicon/{$entry.ns_host}" class="textmarker" />
+            <img src="/data/favicons/{$entry.ns_host}" class="textmarker" />
             {$entry.datex}
             <a href="{$entry.ni_url}" target="_blanc">{$entry.ni_title}</a>
         </h4>
