--- a/templates/index.html/index.sm.html
+++ b/templates/index.html/index.sm.html
@@ -23,7 +23,7 @@
     {foreach from=$agrnewsentries item=entry}
     <div class="index-blog-record">
         <h4 class="index-blog-title">
-            <img src="/data/favicons/{$entry.ns_host}" class="textmarker" />
+            <img src="/data/favicons/{$entry.ns_host}.png" class="textmarker" />
             {$entry.datex}
             <a href="{$entry.ni_url}" target="_blanc">{$entry.ni_title}</a>
         </h4>
@@ -36,7 +36,6 @@
 </div>
 
 <div id="yandex_ad" style="clear:both;"></div>
-<script type="text/javascript" src="/js/adv_city.js"></script>
 <style>
     h3 {
         color:#fff;
