--- a/templates/_admin/admpage.sm.html
+++ b/templates/_admin/admpage.sm.html
@@ -5,7 +5,7 @@
         <title>{$title}</title>
         <link rel="shortcut icon" href="/favicon.ico" />
         <link rel="stylesheet" href="/css/admin.css" type="text/css" />
-        <script type="text/javascript" src="http://yandex.st/jquery/1.11.0/jquery.min.js"></script>
+        <script type="text/javascript" src="https://yandex.st/jquery/1.11.0/jquery.min.js"></script>
         <script type="text/javascript" src="/addons/ckeditor.4.1/ckeditor.js"></script>
         <script type="text/javascript" src="/js/admin.js"></script>
     </head>
