--- a/templates/_main/main.html.sm.html
+++ b/templates/_main/main.html.sm.html
@@ -22,7 +22,7 @@
                     <script src="https://css3-mediaqueries-js.googlecode.com/svn/trunk/css3-mediaqueries.js"></script>
                 <![endif]-->
                 <script type="text/javascript" src="https://yandex.st/jquery/1.7.2/jquery.min.js" defer="defer"></script>
-                <script type="text/javascript" src="https://api-maps.yandex.ru/2.0/?coordorder=longlat&load=package.full&wizard=constructor&lang=ru-RU" defer="defer"></script>
+                <script type="text/javascript" src="http://api-maps.yandex.ru/2.1/?lang=ru_RU&coordorder=longlat" defer="defer"></script>
                 {if $page->user.userid}
                 <script type="text/javascript" src="/addons/ckeditor/ckeditor.js" defer="defer"></script>
                 <script type="text/javascript" src="/addons/ckeditor/adapters/jquery.js" defer="defer"></script>
