--- a/templates/_main/main.html.sm.html
+++ b/templates/_main/main.html.sm.html
@@ -25,10 +25,10 @@
                 {if $page->user.userid}
                 <script type="text/javascript" src="/addons/ckeditor/ckeditor.js" defer="defer"></script>
                 <script type="text/javascript" src="/addons/ckeditor/adapters/jquery.js" defer="defer"></script>
-                <script type="text/javascript" src="/js/jquery.ui.core.js" defer="defer"></script>
-                <script type="text/javascript" src="/js/jquery.ui.datepicker.js" defer="defer"></script>
-                <script type="text/javascript" src="/js/jquery.ui.datepicker-ru.js" defer="defer"></script>
-                <link rel="stylesheet" href="/css/ui-lightness/jquery-ui-1.8.2.custom.css" type="text/css" />
+                <script type="text/javascript" src="/addons/jquery.ui/jquery.ui.core.js" defer="defer"></script>
+                <script type="text/javascript" src="/addons/jquery.ui/jquery.ui.datepicker.js" defer="defer"></script>
+                <script type="text/javascript" src="/addons/jquery.ui/jquery.ui.datepicker-ru.js" defer="defer"></script>
+                <link rel="stylesheet" href="/addons/jquery.ui/ui-lightness/jquery-ui-1.8.2.custom.css" type="text/css" />
                 {/if}
                 <link rel="stylesheet" href="/css/{$page->mainfile_css}" type="text/css" media="screen, projection, print"/>
                 <script type="text/javascript" src="/js/{$page->mainfile_js}" defer="defer"></script>
