--- a/templates/_pages/pagepoint.sm.html
+++ b/templates/_pages/pagepoint.sm.html
@@ -58,7 +58,7 @@
 {/if}
 <div style="height:25px;overflow:hidden;margin: 10px;">
     <script type="text/javascript" src="//yandex.st/share/share.js" charset="utf-8" defer="defer"></script>
-    <div class="yashare-auto-init" data-yashareL10n="ru" data-yashareType="none" data-yashareQuickServices="yaru,vkontakte,facebook,twitter,odnoklassniki,moimir,lj,friendfeed,moikrug,gplus"></div> 
+    <div class="yashare-auto-init" data-yashareL10n="ru" data-yashareType="none" data-yashareQuickServices="vkontakte,facebook,twitter,odnoklassniki,gplus"></div> 
 </div>
 
 
