--- a/templates/map/map.sm.html
+++ b/templates/map/map.sm.html
@@ -4,15 +4,5 @@
 
 <div style="height:25px;overflow:hidden;margin: 10px;">
     <script type="text/javascript" src="//yandex.st/share/share.js" defer="defer" charset="utf-8"></script>
-    <div class="yashare-auto-init" data-yashareL10n="ru" data-yashareType="none" data-yashareQuickServices="yaru,vkontakte,facebook,twitter,odnoklassniki,moimir,lj,friendfeed,moikrug,gplus"></div> 
+    <div class="yashare-auto-init" data-yashareL10n="ru" data-yashareType="none" data-yashareQuickServices="vkontakte,facebook,twitter,odnoklassniki,gplus"></div> 
 </div>
-
-<style>
-    #maponpage {
-        width:99%;
-        min-height:400px;  
-        height:600px;
-        border:1px solid #99B099;
-        margin:0 auto;
-    }
-</style>
