--- a/css/common-media-queries.css
+++ b/css/common-media-queries.css
@@ -98,7 +98,10 @@
         margin-left: auto;
     }
     .list-half-right li {
-        margin-top: 2px;
+        margin-top: 7px;
+    }
+    .list-half-right li .objlink {
+        font-size: 110%;
     }
     .list-map {
         height:150px;
@@ -505,8 +508,8 @@
         float: none;
     }
     .list-half-right li {
-        margin-top: 3px;
-        margin-right: 13px;
+        margin-top: 7px;
+        margin-right: 15px;
     }
     .list-map {
         height:100px;
