Список влодящих городов увеличим

--- a/css/common-media-queries.css
+++ b/css/common-media-queries.css
@@ -72,7 +72,7 @@
         padding: 6px;
     }
     .city_nearmenu ul li {
-        margin: 3px;
+        margin: 4px;
     }
     #object_description {
         margin:0;
@@ -503,6 +503,10 @@
     }
     #citytext {
         font-size: 120%;
+    }
+    .city_nearmenu ul li {
+        margin-bottom: 4px;
+        margin-right: 8px;
     }
     #point_gps {
         display:none;
