--- a/css/common-media-queries.css
+++ b/css/common-media-queries.css
@@ -505,8 +505,9 @@
         font-size: 120%;
     }
     .city_nearmenu ul li {
-        margin-bottom: 4px;
-        margin-right: 8px;
+        font-size: 110%;
+        margin-bottom: 5px;
+        margin-right: 10px;
     }
     #point_gps {
         display:none;
