Повторный вызов не обрабатывать

--- a/templates/_ajax/citylatlon.form.sm.html
+++ b/templates/_ajax/citylatlon.form.sm.html
@@ -23,5 +23,6 @@
     $("body").live("afterShowWindByURL", function () {
         showMap($("#mapcenter_lat").val(), $("#mapcenter_lon").val(), $("#city_zoom").val(), $("#obj_point_h").val());
         $('#objfinder_map').focus();
+        $("body").die("afterShowWindByURL");
     });
 </script>
