--- a/templates/_errors/er404.sm.html
+++ b/templates/_errors/er404.sm.html
@@ -1,11 +1,9 @@
 <p>Запрошенный вами адрес URL <b>http://<!--#echo var="REQUEST_URI" --></b> не найден на сервере.</p>
 <p>
-    Попробуйте начать со стартовой страницы <a href="http://<!--#echo var="HTTP_HOST" -->/">http://<!--#echo var="HTTP_HOST" -->/</a>
+    Попробуйте начать со стартовой страницы <a href="https://<!--#echo var="HTTP_HOST" -->/"><!--#echo var="HTTP_HOST" --></a>, посмотрите,
+    какие <a href="https://<!--#echo var="HTTP_HOST" -->/city/">регионы</a> у нас представлены
     или воспользуйтесь <a href="http://<!--#echo var="HTTP_HOST" -->/search/">поиском</a>.
 </p>
-
-<h2>Not Found</h2>
 <p>
     The requested URL <!--#echo var="REQUEST_URI" --> was not found on this server.
-    <i><!--#echo var="HTTP_SIGNATURE" --></i>
 </p>
