Ссылка на карту

--- a/templates/_errors/er404.sm.html
+++ b/templates/_errors/er404.sm.html
@@ -5,5 +5,8 @@
     или воспользуйтесь <a href="http://<!--#echo var="HTTP_HOST" -->/search/">поиском</a>.
 </p>
 <p>
+    А еще можно попробовать найти что-нибудь <a href="http://<!--#echo var="HTTP_HOST" -->/map/">на карте</a>.
+</p>
+<p>
     The requested URL <!--#echo var="REQUEST_URI" --> was not found on this server.
 </p>
