Картинка на странице 404

--- a/templates/_errors/er404.sm.html
+++ b/templates/_errors/er404.sm.html
@@ -1,3 +1,4 @@
+<img src="/img/elements/compass.jpg" style="float:left; margin:6px;" />
 <p>Запрошенный вами адрес URL <b>http://<!--#echo var="REQUEST_URI" --></b> не найден на сервере.</p>
 <p>
     Попробуйте начать со стартовой страницы <a href="https://<!--#echo var="HTTP_HOST" -->/"><!--#echo var="HTTP_HOST" --></a>, посмотрите,
@@ -7,3 +8,4 @@
 <p>
     А еще можно попробовать найти что-нибудь <a href="http://<!--#echo var="HTTP_HOST" -->/map/">на карте</a>.
 </p>
+<div style="clear:both;"></div>
