Картинку ограничил по высоте

--- a/templates/_errors/er404.sm.html
+++ b/templates/_errors/er404.sm.html
@@ -1,4 +1,4 @@
-<img src="/img/elements/compass.jpg" style="float:left; margin:6px;" />
+<img src="/img/elements/compass.jpg" style="float:left; margin:6px; height: 200px;" />
 <p>Запрошенный вами адрес URL <b>http://<!--#echo var="REQUEST_URI" --></b> не найден на сервере.</p>
 <p>
     Попробуйте начать со стартовой страницы <a href="https://<!--#echo var="HTTP_HOST" -->/"><!--#echo var="HTTP_HOST" --></a>, посмотрите,
