Картинка на странице 503

--- a/templates/_errors/er503.sm.html
+++ b/templates/_errors/er503.sm.html
@@ -1,3 +1,6 @@
+<img src="/img/elements/server-anavailable-200.png" style="float:left; margin:6px; height: 200px;" />
 <p>
-    На сервере ведутся профилактические работы. Сайт будет доступен через несколько минут. Приносим свои извинения за доставленные неудобства.
+    Похоже, у нас проблемы.
+    На сервере ведутся ремонтные работы. Сайт будет доступен через несколько минут.
+    Приносим свои извинения за доставленные неудобства.
 </p>
