--- a/templates/_errors/er404.sm.html
+++ b/templates/_errors/er404.sm.html
@@ -1,4 +1,4 @@
-<img src="/img/elements/compass.jpg" style="float:left; margin:6px; height: 200px;" />
+<img src="/img/elements/compass.jpg" class="errpage_img_main" />
 <p>Запрошенный вами адрес URL <b>https://{$requested}</b> не найден на сервере.</p>
 <p>
     Попробуйте начать со стартовой страницы <a href="/">{$host}</a>, посмотрите,
@@ -8,4 +8,4 @@
 <p>
     А еще можно попробовать найти что-нибудь <a href="https://{$host}/map/">на карте</a>.
 </p>
-<div style="clear:both;"></div>
+<div class="m_clear"></div>
