--- a/templates/_errors/er503.sm.html
+++ b/templates/_errors/er503.sm.html
@@ -1,6 +1,8 @@
-<img src="/img/elements/server-anavailable-200.png" style="float:left; margin:6px; height: 200px;" />
+<img src="/img/elements/server-anavailable-200.png" class="errpage_img_main" />
 <p>
     Похоже, у нас проблемы.
+    <br/>
     На сервере ведутся ремонтные работы. Сайт будет доступен через несколько минут.
+    <br/>
     Приносим свои извинения за доставленные неудобства.
 </p>
