Переверстал модуль обратной связи

--- a/templates/feedback/feedpage.sm.html
+++ b/templates/feedback/feedpage.sm.html
@@ -25,7 +25,7 @@
         </tr>
         <tr>
             <td><label for="fmail">Электронная&nbsp;почта</label></td>
-            <td colspan="3"><input type="text" id="fmail" name="fmail" class="feedinput" value="{$fmail}" placeholder="ivan@ivanov.ru" style="width:50%" /></td>
+            <td colspan="3"><input type="email" id="fmail" name="fmail" class="feedinput" value="{$fmail}" placeholder="ivan@ivanov.ru" style="width:50%" /></td>
         </tr>
         <tr>
             <td colspan="4"><hr/></td>
@@ -51,6 +51,3 @@
         </tr>
     </table>
 </form>
-<style>
-    #ftextcheck { display:none;}
-</style>
