--- a/css/common-modules.css
+++ b/css/common-modules.css
@@ -61,6 +61,225 @@
     height:300px;
 }
 
+/*------------------------------------- SIGN --------------------------*/
+.sign_form_little {
+    width:500px;
+    height:300px;
+    margin: 2em auto;
+    padding:2em;
+    border:1px solid #3187c4;
+}
+.button_common {
+    color:#fff;
+    background:#0e506e;
+    padding:.5em;
+    text-transform: uppercase;
+    border-radius: 5px;    
+    -webkit-border-radius: 5px;
+    -moz-border-radius: 5px;
+}
+/*------------------------------------- BLOG --------------------------*/
+.blog_title {
+    background:none;
+}
+.blog_attrs {
+    margin-top:2px;
+    margin-left: 20px;
+    color:#afafaf;
+    font-size:smaller;
+}
+.blog_attrs img {
+    vertical-align: middle;
+    margin-right: 0.5em;
+}
+.datepicker {
+    width: 90px;
+    background-image:url('/img/ico/ico.calendar.gif');
+    background-position:right top;
+    background-repeat: no-repeat;
+    cursor:pointer;
+}
+/*------------------------------------- WEATHER --------------------------*/
+#city_float {
+    width:200px;
+    float:right;
+    margin:5px auto;
+    margin-left:5px;
+    position:relative;
+}
+.city_weather {
+    border: 1px solid #99B099;
+    height:65px;
+    text-align:center;
+    background-color:#DDF4FF;
+}
+.weatherblock_icon {float:left;}
+.weatherblock_temperature {font-size:120%;font-weight:bold;width:120px;margin-left:55px;}
+.weatherblock_elements {font-size:80%;text-align:left;text-align:right;margin-right: 2px}
+.weatherblock_legal {clear:both;font-size:70%;text-align:center;}
+/*----------------------------------- METADATA ------------------------*/
+.city_metadata {
+    margin-top:2px;
+    padding:2px;
+    border: 1px solid #99B099;
+    background-color:#E0FCE7;
+    font-size:70%;
+}
+.city_metadata table {
+    width:100%
+}
+.city_metadata table td {
+    vertical-align:top;
+}
+.city_metadata table th {
+    font-weight:bold;
+    text-align:left;
+    vertical-align:top;
+}
+/*------------------------------------- MAPS --------------------------*/
+#maponpage {
+    width:99%;
+    min-height:400px;  
+    height:600px;
+    border:1px solid #99B099;
+    margin:0 auto;
+}
+#map_container {
+    float: right;
+    position: relative;
+    text-align: center;
+}
+#city_map {
+    border:1px solid #99B099;
+    background-color:#DDFEDD;
+    height: 400px;
+    width: 500px;
+    margin:5px;
+}
+#city_map_link {
+    position:relative;
+    display:block;
+    top:-395px;
+    width: 30%;
+    margin:0 auto;
+    text-align: center;
+    opacity: 0.7;
+    filter: alpha(Opacity=70);
+    background-color:#fff;
+}
+#city_types {
+    width: 500px;
+    text-align:center;
+    display: none;
+}
+#objfinder_map {
+    border:1px solid #99B099;
+    background-color:#DDFEDD;
+    height: 350px;
+    width: 600px;
+    margin:5px;
+}
+ymaps h3 {
+    font-size: 12pt;
+    background: none;
+}
+ymaps .objlink {
+    font-size: 11pt;
+    text-decoration: none;
+}
+ymaps .ymap_balloon {
+    font-size:12px;
+    max-width:250px;
+}
+.point_dataext {
+    color:#A59F9A;
+}
+
+/*----------------------------------- FEEDBACK ------------------------*/
+.feedtable {
+    width:70%;
+    border:#7d7d7d 1px solid;
+    padding:2px;
+    margin-bottom:2px;
+}
+.feedinput {
+    width:100%;
+    border-width:1px;
+}
+textarea.feedinput {
+    height:200px;
+}
+.feedtable label {
+    padding:5px;
+}
+.feedhighlight {
+    color:red;
+}
+#ftextcheck {
+    display:none;
+}
+.feedresult_message {
+    min-height: 150px;
+    margin:3px;
+    padding:5px;
+    font-style:italic;
+    border:1px solid #777;
+    background-color: #efefef;
+}
+
+/*----------------------------------- SEARCH ------------------------*/
+#searchrorm_form {
+    margin:1px;
+}
+#searchform_input {
+    width: 500px;
+    height: 24px;
+    font-size: 16pt;
+    margin:50px 0 40px 60px;
+}
+#searchform_submit {
+    height: 42px;
+    width: 140px;
+    vertical-align:middle;
+    margin-top: 4px;
+    font-size: 15pt;
+
+    display: inline-block;
+    zoom: 1; /* хак IE7 для display: inline-block*/
+    outline: none;
+    cursor: pointer;
+    text-align: center;
+    text-decoration: none;
+    padding: .3em 2em .55em;
+    text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.5); /* CSS3: тень для текста */
+    -webkit-border-radius: .5em; /* CSS3: закругление границ для Safari, Chrome */
+    -moz-border-radius: .5em; /* CSS3: закругление границ для FireFox */
+    border-radius: .5em;
+    -webkit-box-shadow: 0 1px 2px rgba(0,0,0,.2); /* CSS3: тень элемента для Safari, Chrome */
+    -moz-box-shadow: 0 1px 2px rgba(0,0,0,.2); /* CSS3: тень элемента для FireFox */
+    box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.2);
+
+    border: solid 1px #D0C293;
+    background: #F1E1AA;
+    background: -o-linear-gradient(#F6ECCA, #E0D19E); /* CSS3: фон с градиентом для Opera 11+ */
+    background: -webkit-gradient(linear, left top, left bottom, from(#F6ECCA), to(#E0D19E)); /* CSS3: фон с градиентом для Safari, Chrome */
+    background: -moz-linear-gradient(top,  #F6ECCA,  #E0D19E); /* CSS3: фон с градиентом для FireFo 3.6+ */
+    filter:  progid:DXImageTransform.Microsoft.gradient(startColorstr='#F6ECCA', endColorstr='#E0D19E'); /* CSS3: фон с градиентом для IE */
+}
+#searchform_submit:hover {
+    background: #EADBA5;
+    background: -o-linear-gradient(#E8DFBF, #DACB9A);
+    background: -webkit-gradient(linear, left top, left bottom, from(#E8DFBF), to(#DACB9A));
+    background: -moz-linear-gradient(top,  #E8DFBF,  #DACB9A);
+    filter:  progid:DXImageTransform.Microsoft.gradient(startColorstr='#E8DFBF', endColorstr='#DACB9A');
+    color: #fff;
+}
+#searchform_submit:active {
+    position:relative;
+    top:1px;
+    left: 1px;
+}
+
 /*------------------------------- page CITY ----------------------------------*/
 #city_path {
     text-align: right;
@@ -360,212 +579,4 @@ input.dogo {
 }
 #pc_latlon_handler input {
     display:inline;
-}
-
-/*------------------------------------- SIGN --------------------------*/
-.sign_form_little {
-    width:500px;
-    height:300px;
-    margin: 2em auto;
-    padding:2em;
-    border:1px solid #3187c4;
-}
-.button_common {
-    color:#fff;
-    background:#0e506e;
-    padding:.5em;
-    text-transform: uppercase;
-    border-radius: 5px;    
-    -webkit-border-radius: 5px;
-    -moz-border-radius: 5px;
-}
-/*------------------------------------- BLOG --------------------------*/
-.blog_title {
-    background:none;
-}
-.blog_attrs {
-    margin-top:2px;
-    margin-left: 20px;
-    color:#afafaf;
-    font-size:smaller;
-}
-.blog_attrs img {
-    vertical-align: middle;
-    margin-right: 0.5em;
-}
-.datepicker {
-    width: 90px;
-    background-image:url('/img/ico/ico.calendar.gif');
-    background-position:right top;
-    background-repeat: no-repeat;
-    cursor:pointer;
-}
-/*------------------------------------- WEATHER --------------------------*/
-#city_float {
-    width:200px;
-    float:right;
-    margin:5px auto;
-    margin-left:5px;
-    position:relative;
-}
-.city_weather {
-    border: 1px solid #99B099;
-    height:65px;
-    text-align:center;
-    background-color:#DDF4FF;
-}
-.weatherblock_icon {float:left;}
-.weatherblock_temperature {font-size:120%;font-weight:bold;width:120px;margin-left:55px;}
-.weatherblock_elements {font-size:80%;text-align:left;text-align:right;margin-right: 2px}
-.weatherblock_legal {clear:both;font-size:70%;text-align:center;}
-/*----------------------------------- METADATA ------------------------*/
-.city_metadata {
-    margin-top:2px;
-    padding:2px;
-    border: 1px solid #99B099;
-    background-color:#E0FCE7;
-    font-size:70%;
-}
-.city_metadata table {
-    width:100%
-}
-.city_metadata table td {
-    vertical-align:top;
-}
-.city_metadata table th {
-    font-weight:bold;
-    text-align:left;
-    vertical-align:top;
-}
-/*------------------------------------- MAPS --------------------------*/
-#maponpage {
-    width:99%;
-    min-height:400px;  
-    height:600px;
-    border:1px solid #99B099;
-    margin:0 auto;
-}
-#map_container {
-    float: right;
-    position: relative;
-    text-align: center;
-}
-#city_map {
-    border:1px solid #99B099;
-    background-color:#DDFEDD;
-    height: 400px;
-    width: 500px;
-    margin:5px;
-}
-#city_map_link {
-    position:relative;
-    display:block;
-    top:-395px;
-    width: 30%;
-    margin:0 auto;
-    text-align: center;
-    opacity: 0.7;
-    filter: alpha(Opacity=70);
-    background-color:#fff;
-}
-#city_types {
-    width: 500px;
-    text-align:center;
-    display: none;
-}
-#objfinder_map {
-    border:1px solid #99B099;
-    background-color:#DDFEDD;
-    height: 350px;
-    width: 600px;
-    margin:5px;
-}
-ymaps h3 {
-    font-size: 12pt;
-    background: none;
-}
-ymaps .objlink {
-    font-size: 11pt;
-    text-decoration: none;
-}
-ymaps .ymap_balloon {
-    font-size:12px;
-    max-width:250px;
-}
-.point_dataext {
-    color:#A59F9A;
-}
-
-/*----------------------------------- FEEDBACK ------------------------*/
-.feedtable {
-    width:70%;
-    border:#7d7d7d 1px solid;
-    padding:2px;
-    margin-bottom:2px;
-}
-.feedinput {
-    width:100%;
-    border-width:1px;
-}
-textarea.feedinput {
-    height:200px;
-}
-.feedtable label {
-    padding:5px;
-}
-.feedhighlight {
-    color:red;
-}
-
-/*----------------------------------- SEARCH ------------------------*/
-#searchrorm_form {
-    margin:1px;
-}
-#searchform_input {
-    width: 500px;
-    height: 24px;
-    font-size: 16pt;
-    margin:50px 0 40px 60px;
-}
-#searchform_submit {
-    height: 42px;
-    width: 140px;
-    vertical-align:middle;
-    margin-top: 4px;
-    font-size: 15pt;
-
-    display: inline-block;
-    zoom: 1; /* хак IE7 для display: inline-block*/
-    outline: none;
-    cursor: pointer;
-    text-align: center;
-    text-decoration: none;
-    padding: .3em 2em .55em;
-    text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.5); /* CSS3: тень для текста */
-    -webkit-border-radius: .5em; /* CSS3: закругление границ для Safari, Chrome */
-    -moz-border-radius: .5em; /* CSS3: закругление границ для FireFox */
-    border-radius: .5em;
-    -webkit-box-shadow: 0 1px 2px rgba(0,0,0,.2); /* CSS3: тень элемента для Safari, Chrome */
-    -moz-box-shadow: 0 1px 2px rgba(0,0,0,.2); /* CSS3: тень элемента для FireFox */
-    box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.2);
-
-    border: solid 1px #D0C293;
-    background: #F1E1AA;
-    background: -o-linear-gradient(#F6ECCA, #E0D19E); /* CSS3: фон с градиентом для Opera 11+ */
-    background: -webkit-gradient(linear, left top, left bottom, from(#F6ECCA), to(#E0D19E)); /* CSS3: фон с градиентом для Safari, Chrome */
-    background: -moz-linear-gradient(top,  #F6ECCA,  #E0D19E); /* CSS3: фон с градиентом для FireFo 3.6+ */
-    filter:  progid:DXImageTransform.Microsoft.gradient(startColorstr='#F6ECCA', endColorstr='#E0D19E'); /* CSS3: фон с градиентом для IE */
-}
-#searchform_submit:hover {
-    background: #EADBA5;
-    background: -o-linear-gradient(#E8DFBF, #DACB9A);
-    background: -webkit-gradient(linear, left top, left bottom, from(#E8DFBF), to(#DACB9A));
-    background: -moz-linear-gradient(top,  #E8DFBF,  #DACB9A);
-    filter:  progid:DXImageTransform.Microsoft.gradient(startColorstr='#E8DFBF', endColorstr='#DACB9A');
-    color: #fff;
-}
-#searchform_submit:active {
-    position:relative;
-    top:1px;
-    left: 1px;
 }
