--- a/templates/feedback/addpoint.sm.html
+++ b/templates/feedback/addpoint.sm.html
@@ -1,1 +1,47 @@
 <h3>Добавление объекта</h3>
+<p>Если вы считаете, что на сайте не хватает какого-либо объекта, просто заполните форму и нажмите "Отправить".</p>
+<p>Если хотите, чтоб с вами связались, оставьте свои контактные данные.
+    Они не будут опубликованы или использованы в других целях, кроме связи с вами.
+    Оставить отзыв по остальным вопросам можно в <a href="/feedback/">"Обратной связи"</a>.</p>
+<form method="post" action=".">
+    <table class="addpoint-formtable m_clear">
+        <tr>
+            <td>Наименование</td>
+            <td colspan="3"><input type="text" name="title" value="" class="m_width_full m_highter" /></td>
+        </tr>
+        <tr>
+            <td colspan="2">Местонахождение (город, регион или страна)</td>
+            <td colspan="2"><input type="text" name="region" value="" class="m_width_full m_highter" /></td>
+        </tr>
+        <tr>
+            <td colspan="4">
+                Описание:<br/>
+                <textarea name="descr" class="addpoint-textarea m_width_full"></textarea>
+            </td>
+        </tr>
+        <tr>
+            <td>Адрес</td>
+            <td colspan="3"><input type="text" name="addrs" value="" class="m_width_full m_highter" /></td>
+        </tr>
+        <tr>
+            <td>Телефон</td>
+            <td><input type="tel" name="phone" value="" class="m_width_full m_highter" /></td>
+            <td>Сайт</td>
+            <td><input type="text" name="web" value="" class="m_width_full m_highter" /></td>
+        </tr>
+        <tr>
+            <td>График работы</td>
+            <td colspan="3"><input type="text" name="worktime" value="" class="m_width_full m_highter" /></td>
+        </tr>
+        <tr>
+            <td>Ваше имя</td>
+            <td><input type="text" name="name" value="" class="m_width_full m_highter" /></td>
+            <td>Эл. адрес</td>
+            <td><input type="email" name="email" value="" class="m_width_full m_highter" /></td>
+        </tr>
+        <tr>
+            <td colspan="4" class="m_center"><input type="submit" class="bigbutton" value="Отправить" /></td>
+        </tr>
+    </table>
+
+</form>
