Сообщение об успешном добавлении заявки, see #12

--- a/templates/feedback/addsuccess.sm.html
+++ b/templates/feedback/addsuccess.sm.html
@@ -1,1 +1,17 @@
-Все ок!
+<h3>Ваша заявка принята!</h3>
+<p>Спасибо вам за проявленный интерес к нашему сайту!</p>
+<p>
+    <em>Ваше сообщение в ближайшее время будет рассмотрено модераторами и, по возможности, опубликовано.
+        Ваши контактные данные не будут переданы третьим лицам.</em>
+</p>
+<div>
+    <strong>Текст вашего сообщения:</strong>
+    <div class="feedresult_message">
+        {if $add_title}<strong>Название:</strong> {$add_title}<br/>{/if}
+        {if $add_region}<strong>Регион:</strong> {$add_region}<br/>{/if}
+        {if $add_descr}<strong>Описание:</strong><br/> {$add_descr}{/if}
+    </div>
+</div>
+
+
+<a href="/" class="m_clear">вернуться на главную страницу</a>
