Ссылка на новую форму, see #12

--- a/templates/feedback/feedpage.sm.html
+++ b/templates/feedback/feedpage.sm.html
@@ -1,4 +1,8 @@
 <h3>Заполните, пожалуйста, все поля формы</h3>
+<p>
+    Здесь вы можете выступить с предложением, вопросом, жалобой.
+    Добавить объект в нашу базу можно в <a href="/feedback/newpoint/">соответствующем разделе</a>.
+</p>
 <form method="post" id="feedform">
     <input type="text" name="ftextcheck" id="ftextcheck" value="" />
     <table class="feedtable" style="margin:10px auto;">
