--- a/templates/_admin/admpage.sm.html
+++ b/templates/_admin/admpage.sm.html
@@ -5,9 +5,10 @@
         <title>{$title}</title>
         <link rel="shortcut icon" href="/favicon.ico" />
         <link rel="stylesheet" href="/css/admin.css" type="text/css" />
-        <script type="text/javascript" src="/addons/jquery.2.1.3.min.js"></script>
-        <script type="text/javascript" src="/addons/jquery-migrate-1.2.1.min.js"></script>
-        <script type="text/javascript" src="/addons/ckeditor.4.1/ckeditor.js"></script>
+        <script type="text/javascript" src="/addons/jquery/jquery.2.1.3.min.js"></script>
+        <script type="text/javascript" src="/addons/jquery/jquery-migrate-1.2.1.min.js"></script>
+        <script type="text/javascript" src="/addons/ckeditor.4.4/ckeditor.js" defer="defer"></script>
+        <script type="text/javascript" src="/addons/ckeditor.4.4/adapters/jquery.js" defer="defer"></script>
         <script type="text/javascript" src="/js/admin.js"></script>
     </head>
     <body>
