--- a/templates/_admin/pointadding.item.sm.html
+++ b/templates/_admin/pointadding.item.sm.html
@@ -1,25 +1,73 @@
 <img class="pageicon" src="/img/admin/ico.a_refs.gif" />
 <h3>{$title}</h3>
-<p>Обработка заявки</p>
 
 <table class="detailtable">
     <tr>
         <th>Название</th>
         <td>
-            <input type="text" id="pointadding-item-title" value="{$claim.cp_title}" />
+            <input type="text" class="m_width_full" id="pointadding-item-title" value="{$claim.cp_title}" />
         </td>
+        <td>Возможные аналоги</td>
     </tr>
     <tr>
         <th>Тип</th>
         <td>
 
         </td>
+        <td rowspan="4" class="h_valign_top">
+            <ul></ul>
+            <div class="m_center"><input type="button" value="искать" /></div>
+        </td>
+    </tr>
+    <tr>
+        <th>Регион</th>
+        <td>
+            <span class="pointadding-item-city-typed" title="Как ввел пользователь">{$claim.cp_city}</span>
+            <input type="hidden" value="" />
+            <input type="hidden" value="" />
+        </td>
     </tr>
     <tr>
         <td colspan="2">
-            <textarea class="pointadding-item-textarea m_width_full" id="pointadding-item-text">{$claim.cp_text}</textarea>
+            <textarea class="pointadding-item-textarea" id="pointadding-item-text">{$claim.cp_text}</textarea>
         </td>
     </tr>
+
+    <tr>
+        <th>Адрес</th>
+        <td>
+            <input type="text" value="{$claim.cp_addr}" class="m_width_full" />
+        </td>
+
+    </tr>
+    <tr>
+        <th>Телефон</th>
+        <td>
+            <input type="text" value="{$claim.cp_phone}" class="m_width_full" />
+        </td>
+        <td rowspan="2" class="h_valign_top" nowrap="nowrap">
+            <b>Отправитель:</b><br/>
+            {$claim.cp_sender}
+        </td>
+    </tr>
+    <tr>
+        <th>Телефон</th>
+        <td>
+            <input type="text" value="{$claim.cp_worktime}" class="m_width_full" />
+        </td>
+    </tr>
+    <tr>
+        <th>Веб-сайт</th>
+        <td>
+            <input type="text" value="{$claim.cp_web}" class="m_width_full" />
+        </td>
+        <td rowspan="2" class="h_valign_top">
+            <b>Источник:</b><br/>
+            {$claim.cp_referer}
+        </td>
+    </tr>
+
+
     <tr>
         <td colspan="2" class="m_center">
             <input type="button" id="pointadding-item-confirm" value="Сохранить">
@@ -31,7 +79,7 @@
 
 <script type="text/javascript">
     $(document).ready(function () {
-        $("pointadding-item-text").ckeditor({
+        $("#pointadding-item-text").ckeditor({
             customConfig: "/config/config.cke4.js",
             height: '230px',
             toolbar: "Lite"
@@ -42,6 +90,9 @@
 <style type="text/css">
     .pointadding-item-textarea {
         height: 250px;
-        width:300px;
+        width: 300px;
+    }
+    .pointadding-item-city-typed {
+        font-style: italic;
     }
 </style>
