Относительная ссылка на корень

--- a/templates/_admin/admpage.sm.html
+++ b/templates/_admin/admpage.sm.html
@@ -15,7 +15,7 @@
         <div id="admheader">
             <p id="mainadmin">
                 <a href="/_admin/"><b>Административная часть сайта</b></a>&nbsp;
-                <a href="http://{$site_url}">{$site_url}</a>
+                <a href="/">{$site_url}</a>
             </p>
             <p id="adm_username">{if $adm_user}вы вошли как <b>{$adm_user}</b>{else}необходима авторизация{/if}</p>
             <ul id="admmainmenu">
