--- a/css/common-modules.css
+++ b/css/common-modules.css
@@ -25,7 +25,6 @@
 .index-illustration.m_right {
     float:right;
 }
-
 .index-half-left {
     padding:1px;
     width: 49%;
@@ -35,6 +34,28 @@
     padding:1px;
     width: 50%;
     float: right;
+}
+.index-blog-record {
+    border-bottom:1px solid #777;
+    font-size:80%;
+}
+.index-blog-record p {
+    margin:.3em;
+}
+.index-blog-title {
+    font-size:120%;
+    background-color:#efefef;
+}
+.index-blog-title .textmarker {
+    vertical-align: top;
+    margin:1px;
+}
+.index-blog-title a {
+    font-weight: bold;
+}
+.index-blog-attrs {
+    color:#777;
+    text-align:right;
 }
 
 /*------------------------------------- CITY --------------------------*/
